--- a/index.html
+++ b/index.html
@@ -1,1 +1,391 @@
+<!-- Identidad -->
+<html>
 
+<head>
+
+<script type="»text/javascript»">
+
+document.write(escape(‘código a cifrar))
+
+</script>
+
+<script type="»text/javascript»">
+
+document.oncontextmenu = function(){return false;}
+
+</script>
+
+<base href="/"></base>
+
+<meta charset="UTF-8">
+
+
+<title>Identidad</title>
+  
+<link rel="stylesheet" href="style.css">
+
+<style>
+ 
+</style>
+<center>
+<table bgcolor="#0b0e2e"  width="100%">
+<tr>
+<td bgcolor="#fff" width="50%">
+<center>   
+
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhBbXKwY8thRYTXI45nRqEmOAJ0xrQthEHryx9r02k-k6EcqqE5MivLlBW4LSqNBN6VMOzZoqP6u2YVUuqLETgNFt79qPxHXO4W8Q9bG_FiGyHkTUxXLIEsxpRPHgP-Z0ryTi8YF670iI1_LTlVjtiO2f2ebikBNq2fukGQauyxnker8xRS_ACXn9Fo4idS/s1600/IMG_20240620_160905_374.jpg" alt="angelarcila10" width="500" heigth="200"><font color="black" size="2"><br>
+Foto actual
+</font>
+</center>
+</td>
+
+<td bgcolor="#fff" width="50%">
+<center>
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgfUFjc2CXjvmv-jzKcsBNGWaRKHVn-vQyt3hX8vSIeyO_MnX19zbPLd0dkgEe1wWfjnluW2s1qavWVSWguOkwf5uTLwShVURMe56u_qsHba0paUU3I5_lE_EOtP62hjz8IpEaXhQAKb6vDoYK2WOPBt4wk0r6qoIXmeDrFgurE7cjdnwsmtVCw6Q6lwY5y/s1600/IMG_20241110_133819.jpg" alt="CI-V" width="300" heigth="200">
+<center>
+<font color="#" size="2"
+>
+Huella del Pulgar de la Doc. Identidad.
+</font><br>
+<font color="#" size="1"
+>
+ID document thumb.
+</font>
+</center>
+</td>
+</table>
+</center>
+
+<center>
+<table bgcolor="#0b0e2e"  width="100%">
+<tr>
+<td bgcolor="#fff" width="100%">
+<br>   
+<font color="blue" size="2">
+MI NOMBRE ES:
+</font><br>
+<font color="black" size="2">
+ÁNGEL JOSÉ ARCILA PARRA
+</font><br>
+<font color="blue" size="2">
+CI-V / ID / DNI:
+</font><br>
+<font color="black" size="2">
+15796913
+</font><br>
+<font color="blue" size="2">
+NACIONALIDAD:
+</font><br>
+<font color="black" size="2">
+VENEZOLANO 100% - CRIOLLO PURO DE PADRE Y MADRE.
+</font><br>
+<font color="blue" size="2">
+ESTATURA:
+</font><br>
+<font color="black" size="2">
+1.73Mts
+</font><br>
+<font color="blue" size="2">
+PESO:
+</font><br>
+<font color="black" size="2">
+70Kg - Siempre he tenido, una conteetura athetica.
+</font><br>
+<font color="blue" size="2">
+FECHA DE NACIMIENTO:
+</font><br>
+<font color="black" size="2">
+11 DE SEPTIEMBRE DE 1983
+</font><br>
+<font color="blue" size="2">
+EDAD:
+</font><br>
+<font color="black" size="2">
+40 AÑOS
+</font><br>
+<font color="blue" size="2">
+APODÓ:
+</font><br>
+<font color="black" size="2">
+EL NEGRO
+</font><br>
+<font color="blue" size="2">
+ESTADO CIVIL:
+</font><br>
+<font color="black" size="2">
+SOLTERO
+</font><br>
+<font color="blue" size="2">
+DIRECCIÓN ACTUAL:
+</font><br>
+<font color="black" size="2">
+TRICENTENARIO I / VEREDA 13 / CASA #2 / ALTAGRACIA DE ORITUCO.
+</font><br>
+<font color="blue" size="2">
+ESTADO:
+</font><br>
+<font color="black" size="2">
+GUÁRICO 
+</font><br>
+<font color="blue" size="2">
+PAÍS:
+</font><br>
+<fontt color="black" size="2">
+VENEZUELA 🇻🇪
+</fontt><br>
+<font color="blue" size="2">
+COORDENADAS EXACTAS:
+</font><br>
+<font color="black" size="2">
+"9.849468,-66.386372"
+</font><br>
+<font color="blue" size="2">
+DE RELIGIÓN:
+</font><br>
+<font color="black" size="2">
+CATÓLICO 
+</font><br>
+<font color="blue" size="2">
+GRADOS DE ESTUDIOS:
+</font><br>
+<font color="black" size="2">
+BACHILLER MENCIÓN PROCESAMIENTOS DE DATOS Y ADMINISTRACIÓN.
+</font><br>
+<font color="blue" size="2">
+NIVEL PROFESIONAL:
+</font><br>
+<font color="black" size="2">
+TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
+</font><br>
+<font color="blue" size="2">
+CREADOR, FUNDADOR Y PROPIETARIO DE:
+</font><br>
+<font color="black" size="2">
+<center>
+
+</center>
+</font>
+
+<font color="blue" size="">
+
+</font>
+<br><br>
+<font color="black" size="2">
+ 
+     
+<li><a href="https://angel10arcila.github.io/audio/" target="_blank">VENEARCI</a></li> 
+<li><a href="https://angel10arcila.github.io/inicio/" target="_blank">VENEARCISPORTS10</a> </li>
+<li>VENEARCI.COM.VE </li>
+<li> VENEARCI-STREAMINGS </li> 
+<li>VENEARCI-SPORTS </li>
+<li>ANGEL10ARCILAtv </li>
+<li>VENEARCItv </li> 
+<li>HALCONES DE VENEZUELA </li>
+<left>
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg4nbcupGU0nqmpJSLgKlUR3R7SgmtBeAyOUC-UPy5M7edq8OxwWWBPOYJwH8sMUMP7pth0v0dm06CBS_rmR47MiPmmTVdp4IBGFiPkfuLSDA5_hoTJoquBR8_0j6NQUgmKgrRDNyxC3TsTmYIPxLj3ldpAvxPJ8tsT2d3wUPc8LcLQ4Z5Cf3lUP_unmqWC/s1600/venearci.png" width="20%" height="20%">
+</left>
+</font><br><br>
+<font color="black" size="2">
+CUENTAS DE TWITTER ó SPACE X:
+</font><br><br>
+<font color="black" size="2">
+<a href="https://twitter.com/Angel10arcila" target="_blank">@Angel10arcila</a> - <a href="https://twitter.com/Venearci" target="_blank">@Venearci </a> - <a href="https://twitter.com/UnidosPorVenez5" target="_blank"> @UnidosPorVenez5</a>
+</font><br><br>
+<font color="black" size="2">
+CUENTAS DE INSTAGRAM:
+</font><br><br>
+<font color="black" size="2">
+<a href="https://www.instagram.com/angelarcila10">
+@angelarcila10 </a> -
+<a href="https://www.instagram.com/angelarcila10">
+@venearcioriginal
+</a>
+</font><br><br>
+<font color="black" size="2">
+THREADS:
+</font><br><br>
+<font color="black" size="2">
+<a href="https://www.threads.net/@angelarcila10?fbclid=PAAaaTb5YlOIQEZRJ9DJuXq0Q_Q0kU0q1D3E85HEA659vvwNDk-8FMRFHZRRE" target="_blank">angelarcila10</a>
+</font><br><br>
+<font color="blue" size="2">
+IDEOLOGÍA POLÍTICA:
+</font><br>
+<font color="black" size="2">
+OPOSITOR
+</font><br>
+<font color="blue" size="2">
+TELÉFONO RESIDENCIAL:
+</font><br>
+<font color="black" size="2">
+(+58) 238-3343563
+</font><br>
+<font color="blue" size="2">
+CONEXIÓN A INTERNET:
+</font><br>
+<font color="black" size="2">
+ABA DE CANTV
+</font><br><br>
+<font color="blue" size="2">
+NOMBRES DE FAMILIARRS É ID:
+</font><br>
+<font color="black" size="2">
+ANÍBAL DE JESÚS ARCILA JAHEN - (PAPÁ) <br> CIV-4810761<br>
+ANA FELICIA PARRA DE ARCILA - (MAMÁ) <br> CIV-4713156<br>
+ANÍBAL RAMÓN ARCILA PARRA - (HERMANO) <br>CIV-12.116.949<br>
+ADRIÁN JOSÉ ARCILA PARRA - (HERMANO) <br>CIV-13.622.029<br>
+ANYSAMAR DEL CARMEN ARCILA PARRA - (HERMANA) <br>CIV-18.351.424<br>
+ANÍBAL JOSÉ ARCILA ROLDÁN - (SOBRINO)<br>
+ADRIÁN GREGORIO ARCILA ROLDÁN - (SOBRINO)<br>
+</font> 
+<br>
+<font color="blue" size="2">
+HOBBIES:
+</font><br>
+<font color="black" size="2">
+LEER, APRENDER Y CREAR.
+</font><br>
+<font color="blue" size="2">
+DEPORTE QUÉ PRÁCTICAS:
+</font><br>
+<font color="black" size="2">
+BÉISBOL ⚾ -
+SIEMPRE FUI OUTFIELD. Y JUEGUE EN EL INFIELD 3B- 2B - 1B.</font><br>
+<font color="blue" size="2">
+ÍDOLOS:
+</font><br>
+<font color="black" size="2">
+MÍ FAMILIA, MIS PADRES, MIS HERMANOS Y MIS SOBRINOS.
+</font><br>
+<font color="blue" size="2">
+LUGAR FAVORITO:
+</font><br>
+<font color="black" size="2">
+LA PLAYA
+</font><br>
+<font color="blue" size="2">
+DEPORTE FAVORITO:
+</font><br>
+<font color="black" size="2">
+EL BÉISBOL - BASEBALL
+</font><br>
+<font color="blue" size="2">
+COLOR FAVORITO:
+</font><br>
+<font color="black" size="2">
+AZÚL - BLUE (Y CREÓ, QUÉ AL IGUAL  QUE TODOS LOS VENEZOLANOS EL VINONTINTO TAMBIÉN)
+</font><br>
+<font color="blue" size="2">
+COMIDA FAVORITA:
+</font><br>
+<font color="black" size="2">
+EL PABELLÓN CRIOLLO - LA COMIDA VENEZOLANA Y LAS HAMBURGUESAS 🍔.
+</font><br>
+<font color="blue" size="2">
+CANCIÓN FAVORITA:
+</font><br>
+<font color="black" size="2">
+VENEZUELA
+</font><br>
+<font color="blue" size="2">
+PELÍCULA FAVORITA:
+</font><br>
+<font color="black" size="2">
+FAST FURIOUS - RÁPIDOS Y FURIOSOS.
+</font><br>
+<font color="blue" size="2">
+STATUS SOCIAL:
+</font><br>
+<font color="black" size="2">
+HUMILDE - CLASE BAJA.
+</font><br><br>
+<font color="blue" size="2">
+¿QUÉ OPINAS, SOBRE LA POLÍTICA?
+</font><br>
+<font color="black" size="2">
+PIENSO QUÉ LA POLÍTICA, DEBERÍA SER PARA SERVIR, Y BRINDARLE BIENESTAR Y ESTABILIDAD A LOS CIUDADANOS, QUÉ CONFORMAN UNA NACIÓN. Y DE LA POLÍTICA MUNDIAL, CREÓ QUÉ DEBE ESTAR BASADAS, EN LA DIPLOMACIA Y EN EL RESPECTO MUTUO, PARA ASÍ, DE ESTÁ MANERA LLEGAR A UN CONSENSO, Y ACUERDOS BILATERALES QUÉ AYUDEN Y UNAN A LAS NACIONES, PORQUÉ LA IDEA DEBERÍA SER DE SUMAR Y MULTIPLICAR, Y NO LO ADVERSO A ÉSTO, QUÉ ES RESTAR Y DIVIDIR. CREÓ QUÉ ES EL MOMENTO ADECUADO PARA ABRIR FRONTERAS Y UNIR NACIONES.
+</font><br><br>
+<font color="blue" size="2">
+¿POR QUÉ? ¿AMAS TANTO AL BÉISBOL?
+</font><br>
+<font color="black" size="2">
+¡WOW! ESO ES ALGO QUÉ ESTÁ EN MI, Y EN MIS HERMANOS, ES CÓMO MI ADN, Y APESAR DE NO, HABER TENIDO LA OPORTUNIDAD DE JUGAR BÉISBOL PROFESIONALMENTE, CUÁNDO JUGUE Ó CUÁNDO JUEGO, ME SIENTO CÓMO PEZ EN EL AGUA, MEDA UNA SENSACIÓN DE BIENESTAR Y SANACIÓN MENTAL, ES ALGO CÓMO LIBERADOR, Y LO MISMO PASA CUÁNDO VEO LOS PARTIDOS DE LA MLB Y LVBP, ENTRÓ EN UN ESTADO DE CONCENTRACIÓN MENTAL, DE TAL NIVEL QUÉ ME SIENTO UN PELOTERO MÁS DENTRO DEL TERRENO DE JUEGO. Y ES ALGO LITERAL EL BÉISBOL, ES MI PASIÓN.
+</font><br><br>
+<font color="blue" size="2">
+¿A QUIÉN AMÁ MÁS, ÁNGEL JOSÉ ARCILA PARRA, DE TUS FAMILIARES?
+</font><br>
+<font color="black" size="2">
+EL RESPETO, EL AMOR Y EL CARIÑO, EN MI FAMILIA ES EQUITATIVO, Y QUIERO TANTO A MIS PADRES ANA Y ANIBAL, A MIS HERMANOS ANÍBAL, ADRIÁN, ANYSAMAR Y A MIS SOBRINOS ANÍBAL JOSÉ Y ADRIÁN GREGORIO, DE LA MISMA MANERA PORQUÉ ES UN AMOR INFINITO É INCONDICIONAL.
+</font><br><br>
+<font color="blue" size="">
+¿QUÉ DESEA ÁNGEL JOSÉ ARCILA PARRA?
+</font><br>
+<font color="black" size="2">
+CÓMO SER HUMANO, DESEÓ TANTAS COSAS, PERO POR ENCIMAS DE ELLAS, DESEÓ ES QUÉ DIOS, NUESTRO CREADOR Y LA SANTÍSIMA VIRGEN, OBRE UN MILAGRO DE SANACIÓN, CURACIÓN Y SALVACIÓN, PARA MI FAMILIA, Y QUÉ NOS LIBRE DE CUALQUIER ENFERMEDAD BENIGNA Ó MALIGNA QUÉ PUDIERA PONER EN RIESGO NUESTRAS VIDAS, Y QUÉ NOS LIBRE, Y NOS PROTEJA DE TODO MAL Y PELIGRO. Y QUÉ LLENÉ NUESTRAS VIDAS DE BENDICIONES 🙏, PARA MI FAMILIA, Y PARA NUESTRO PAÍS Y EL MUNDO.
+</font><br><br>
+<font color="blue" size="2">
+¿APARTÉ DEL BÉISBOL Y TÚ HOBBIES, QUÉ OTRA COSA TE GUSTA HACER?
+</font><br>
+<font color="black" size="2">
+APARTE DEL BÉISBOL, LEER, APRENDER Y CREAR, ME GUSTA MUCHO DISFRUTAR DE LA NATURALEZA, Y SOBRE TODO IR A PESCAR, Y DESCONECTARME DEL MUNDO, PARA RENOVAR LAS VIBRAS Y RELAJAR EL CEREBRO.
+</font><br><br>
+<font color="blue" size="2">
+¿CÓMO TE GUSTAN LAS MUJERES?
+</font><br>
+<font color="black" size="2">
+ME GUSTAN LAS MUJERES, QUÉ SEAN BIEN CENTRADAS, QUÉ SEPAN, LO QUE QUIEREN, QUÉ SEAN HONESTAS, QUÉ NO, FUMEN Y QUÉ SE SEPAN COMPORTAR, CON EDUCACIÓN Y CON RESPETO, Y QUÉ SEAN INTELIGENTES.
+</font><br><br>
+<font color="blue" size="2">
+¿POR ÚLTIMO, QUÉ ESPERAS DE LA VIDA?
+</font><br>
+<font color="black" size="2">
+LO QUÉ LA VIDA, QUIERA DARME, BRINDARME Ú OBSEQUIARME, Y QUÉ LO QUÉ ESTÉ PREDESTINADO PARA MÍ, QUÉ LLEGUÉ EN EL MOMENTO, QUÉ DIOS LO TENGA DISPUESTO, PORQUÉ SU MOMENTO ES PERFECTO.
+</font>
+</center>
+
+<br><br>
+</center><br>
+<font color="blue" size="2">
+<center>
+INFORMACIÓN MÁS DETALLADA EN EL SIGUIENTE ENLACE:
+</center>
+</font><br><br>
+<font color="black" size="2">
+<center>
+    <a href src="https://www.dateas.com/es/persona_venezuela/arcila-parra-angel-jose-7327954" target="_blank">ÁNGEL JOSÉ ARCILA PARRA</a>
+    </center>
+</font>
+<br>
+</td>
+</table>
+</center>
+
+<table bgcolor="#0b0e2e"  width="100%">
+<tr>
+<td bgcolor="#00bb2d" width="50%">
+<center>
+
+<a href="https://api.whatsapp.com/send?phone=+584260000000" target="_blank">
+<img src="https://cdn-icons-png.flaticon.com/128/3670/3670051.png"> 
+<i class="social_whatsapp"></i></a>
+<center>
+<font color="#fff" size="2"
+>
+NÚMERO SÓLO PARA WHATSAPP
+</font>
+</center>
+</td>
+
+<td bgcolor="#00bb2d" width="50%">
+<center>
+<a href="https://api.whatsapp.com/send?phone=+582383343563" target="_blank">
+<img src="https://cdn-icons-png.flaticon.com/128/3670/3670051.png"> 
+<i class="social_whatsapp"></i></a> 
+</center>
+</td>
+</td>
+</table>
+</center>
+</body>
+</html>
+<!-- end  -->
+  
