--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ document.oncontextmenu = function(){return false;}
 <center>   
 
 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhBbXKwY8thRYTXI45nRqEmOAJ0xrQthEHryx9r02k-k6EcqqE5MivLlBW4LSqNBN6VMOzZoqP6u2YVUuqLETgNFt79qPxHXO4W8Q9bG_FiGyHkTUxXLIEsxpRPHgP-Z0ryTi8YF670iI1_LTlVjtiO2f2ebikBNq2fukGQauyxnker8xRS_ACXn9Fo4idS/s1600/IMG_20240620_160905_374.jpg" alt="angelarcila10" width="500" heigth="200"><font color="black" size="2"><br>
-Foto actual
+Foto actual ÁNGEL JOSÉ ARCILA PARRA 
 </font>
 </center>
 </td>
@@ -181,9 +181,18 @@ CREADOR, FUNDADOR Y PROPIETARIO DE:
 <li>ANGEL10ARCILAtv </li>
 <li>VENEARCItv </li> 
 <li>HALCONES DE VENEZUELA </li>
-<left>
+<br>
+
+<center>
+<iframe src="https://angel10arcila.github.io/videos/" width="400px" height="1200px" frameborder="0"></iframe>
+
+<iframe src="https://angel10arcila.github.io/inicio/" width="400px" height="1200px" frameborder="0"></iframe>
+</center>
+</center>
+<br>
+<center>
 <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg4nbcupGU0nqmpJSLgKlUR3R7SgmtBeAyOUC-UPy5M7edq8OxwWWBPOYJwH8sMUMP7pth0v0dm06CBS_rmR47MiPmmTVdp4IBGFiPkfuLSDA5_hoTJoquBR8_0j6NQUgmKgrRDNyxC3TsTmYIPxLj3ldpAvxPJ8tsT2d3wUPc8LcLQ4Z5Cf3lUP_unmqWC/s1600/venearci.png" width="20%" height="20%">
-</left>
+</center>
 </font><br><br>
 <font color="black" size="2">
 CUENTAS DE TWITTER ó SPACE X:
@@ -197,8 +206,8 @@ CUENTAS DE INSTAGRAM:
 <font color="black" size="2">
 <a href="https://www.instagram.com/angelarcila10">
 @angelarcila10 </a> -
-<a href="https://www.instagram.com/angelarcila10">
-@venearcioriginal
+<a href="https://www.instagram.com/venearci10">
+@venearci10
 </a>
 </font><br><br>
 <font color="black" size="2">
@@ -388,4 +397,3 @@ NÚMERO SÓLO PARA WHATSAPP
 </body>
 </html>
 <!-- end  -->
-  
