--- a/index.html
+++ b/index.html
@@ -156,10 +156,12 @@ NIVEL PROFESIONAL:
 </font><br>
 <font color="black" size="2">
 TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
-</font><br>
+</font><br><br>
+
+<ul>
 <font color="blue" size="2">
 CREADOR, FUNDADOR Y PROPIETARIO DE:
-</font><br>
+</font></ul>
 <font color="black" size="2">
 <center>
 
@@ -169,7 +171,7 @@ CREADOR, FUNDADOR Y PROPIETARIO DE:
 <font color="blue" size="">
 
 </font>
-<br><br>
+
 <font color="black" size="2">
  
      
@@ -181,6 +183,7 @@ CREADOR, FUNDADOR Y PROPIETARIO DE:
 <li>ANGEL10ARCILAtv </li>
 <li>VENEARCItv </li> 
 <li>HALCONES DE VENEZUELA </li>
+<li>TORTUGAS DE LA SÁBANA</li>
 <br>
 
 <center>
