--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ CREADOR, FUNDADOR Y PROPIETARIO DE:
 <li>VENEARCItv </li> 
 <li>HALCONES DE VENEZUELA </li>
 <li>TORTUGAS DE LA SÁBANA</li>
-<p>Venearci está constituído por la familia Arcila Parra </p>
+<center><p>Venearci está constituído por la familia Arcila Parra </p></center>
 <br>
 
 <center>
