--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ PIENSO QUÉ LA POLÍTICA, DEBERÍA SER PARA SERVIR, Y BRINDARLE BIENESTAR Y ESTA
 ¡WOW! ESO ES ALGO QUÉ ESTÁ EN MI, Y EN MIS HERMANOS, ES CÓMO MI ADN, Y APESAR DE NO, HABER TENIDO LA OPORTUNIDAD DE JUGAR BÉISBOL PROFESIONALMENTE, CUÁNDO JUGUE Ó CUÁNDO JUEGO, ME SIENTO CÓMO PEZ EN EL AGUA, MEDA UNA SENSACIÓN DE BIENESTAR Y SANACIÓN MENTAL, ES ALGO CÓMO LIBERADOR, Y LO MISMO PASA CUÁNDO VEO LOS PARTIDOS DE LA MLB Y LVBP, ENTRÓ EN UN ESTADO DE CONCENTRACIÓN MENTAL, DE TAL NIVEL QUÉ ME SIENTO UN PELOTERO MÁS DENTRO DEL TERRENO DE JUEGO. Y ES ALGO LITERAL EL BÉISBOL, ES MI PASIÓN.
 </font><br><br>
 <font color="blue" size="2">
-¿A QUIÉN AMÁ MÁS, ÁNGEL JOSÉ ARCILA PARRA, DE TUS FAMILIARES?
+¿A QUIÉN AMA, ÁNGEL JOSÉ ARCILA PARRA?
 </font><br>
 <font color="black" size="2">
 EL RESPETO, EL AMOR Y EL CARIÑO, EN MI FAMILIA ES EQUITATIVO, Y QUIERO TANTO A MIS PADRES ANA Y ANIBAL, A MIS HERMANOS ANÍBAL, ADRIÁN, ANYSAMAR Y A MIS SOBRINOS ANÍBAL JOSÉ Y ADRIÁN GREGORIO, DE LA MISMA MANERA PORQUÉ ES UN AMOR INFINITO É INCONDICIONAL.
