--- a/index.html
+++ b/index.html
@@ -328,9 +328,9 @@ PIENSO QUÉ LA POLÍTICA, DEBERÍA SER PARA SERVIR, Y BRINDARLE BIENESTAR Y ESTA
 ¿A QUIÉN AMA, ÁNGEL JOSÉ ARCILA PARRA?
 </font><br>
 <font color="black" size="2">
-EL RESPETO, EL AMOR Y EL CARIÑO, EN MI FAMILIA ES EQUITATIVO, Y QUIERO TANTO A MIS PADRES ANA Y ANIBAL, A MIS HERMANOS ANÍBAL, ADRIÁN, ANYSAMAR Y A MIS SOBRINOS ANÍBAL JOSÉ Y ADRIÁN GREGORIO, DE LA MISMA MANERA PORQUÉ ES UN AMOR INFINITO É INCONDICIONAL.
+EL RESPETO, EL AMOR Y EL CARIÑO, EN MI FAMILIA ES EQUITATIVO, Y QUIERO TANTO A MIS PADRES ANA FELICIA Y ANIBAL DE JESÚS, A MIS HERMANOS ANÍBAL, ADRIÁN, ANYSAMAR Y A MIS SOBRINOS ANÍBAL JOSÉ Y ADRIÁN GREGORIO, DE LA MISMA MANERA PORQUÉ ES UN AMOR INFINITO É INCONDICIONAL.
 </font><br><br>
-<font color="blue" size="">
+<font color="blue" size="2">
 ¿QUÉ DESEA ÁNGEL JOSÉ ARCILA PARRA?
 </font><br>
 <font color="black" size="2">
