--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ ADRIÁN GREGORIO ARCILA ROLDÁN - (SOBRINO)<br>
 HOBBIES:
 </font><br>
 <font color="black" size="2">
-LEER, APRENDER Y CREAR.
+LEER, APRENDER ESCRIBIR, COMPONER Y CREAR.
 </font><br>
 <font color="blue" size="2">
 DEPORTE QUÉ PRÁCTICAS:
