--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ GUÁRICO
 <font color="blue" size="2">
 PAÍS:
 </font><br>
-<fontt color="black" size="2">
+<font color="black" size="2">
 VENEZUELA 🇻🇪
 </fontt><br>
 <font color="blue" size="2">
