--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@ CREADOR, FUNDADOR Y PROPIETARIO DE:
 <li><a href="https://angel10arcila.github.io/audio/" target="_blank">VENEARCI</a></li> 
 <li><a href="https://angel10arcila.github.io/inicio/" target="_blank">VENEARCISPORTS10</a> </li>
 <li>VENEARCI.COM.VE </li>
+<li>VENEARCIOFICIAL.BLOGSPOT.COM</li>
 <li> VENEARCI-STREAMINGS </li> 
 <li>VENEARCI-SPORTS </li>
 <li>ANGEL10ARCILAtv </li>
@@ -202,23 +203,23 @@ CREADOR, FUNDADOR Y PROPIETARIO DE:
 </font><br><br>
 <font color="black" size="2">
 CUENTAS DE TWITTER ó SPACE X:
-</font><br><br>
+</font><br>
 <font color="black" size="2">
 <a href="https://twitter.com/Angel10arcila" target="_blank">@Angel10arcila</a> - <a href="https://twitter.com/Venearci" target="_blank">@Venearci </a> - <a href="https://twitter.com/UnidosPorVenez5" target="_blank"> @UnidosPorVenez5</a>
-</font><br><br>
+</font><br>
 <font color="black" size="2">
 CUENTAS DE INSTAGRAM:
-</font><br><br>
+</font><br>
 <font color="black" size="2">
 <a href="https://www.instagram.com/angelarcila10">
 @angelarcila10 </a> -
 <a href="https://www.instagram.com/venearci10">
 @venearci10
 </a>
-</font><br><br>
+</font><br>
 <font color="black" size="2">
 THREADS:
-</font><br><br>
+</font><br>
 <font color="black" size="2">
 <a href="https://www.threads.net/@angelarcila10?fbclid=PAAaaTb5YlOIQEZRJ9DJuXq0Q_Q0kU0q1D3E85HEA659vvwNDk-8FMRFHZRRE" target="_blank">angelarcila10</a>
 </font><br><br>
