--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
 
 <ul>
 <font color="blue" size="2">
-CREADOR, FUNDADOR Y PROPIETARIO DE:
+<center>CREADOR, FUNDADOR Y PROPIETARIO DE:</center>
 </font></ul>
 <font color="black" size="2">
 <center>
@@ -202,7 +202,7 @@ CREADOR, FUNDADOR Y PROPIETARIO DE:
 <br>
 <center>
 <iframe src="https://angel10arcila.github.io/venearcisports10/" width="400px" height="1200px" frameborder="0"></iframe>
-<iframe src="https://angel10arcila.github.io/rifas/" width="400px" height="700px" frameborder="0"></iframe>
+<iframe src="https://angel10arcila.github.io/rifas/" width="400px" height="1200px" frameborder="0"></iframe>
 </center>
 <br>
 <center>
