--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
 <li>VENEARCIOFICIAL.BLOGSPOT.COM</li>
 <li> VENEARCI-STREAMINGS </li> 
 <li>VENEARCI-SPORTS </li>
+<li>PROMOCIONESVENEARCI.BLOGSPOT.COM</li>
 <li>ANGEL10ARCILAtv </li>
 <li>VENEARCItv </li> 
 <li>HALCONES DE VENEZUELA </li>
