--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ NOMBRES DE FAMILIARRS É ID:
 ANÍBAL DE JESÚS ARCILA JAHEN - (PAPÁ) - <br> PLOMERO - FONTANERO<br> CIV-4810761<br>
 ANA FELICIA PARRA DE ARCILA - (MAMÁ) <br> AMA DE CASA <br> CIV-4713156<br>
 ANÍBAL RAMÓN ARCILA PARRA - (HERMANO) <br> ADMINISTRADOR DE EMPRESAS <br>CIV-12.116.949<br>
-ADRIÁN JOSÉ ARCILA PARRA - (HERMANO) <br> LIC. ADMINISTRACIÓN <br>CIV-13.622.029<br>
+ADRIÁN JOSÉ ARCILA PARRA - (HERMANO) <br> LIC. EN ADMINISTRACIÓN <br>CIV-13.622.029<br>
 ANYSAMAR DEL CARMEN ARCILA PARRA - (HERMANA) <br> ING. INFORMÁTICA <br>CIV-18.351.424<br>
 ANÍBAL JOSÉ ARCILA ROLDÁN - (SOBRINO)<br>
 ADRIÁN GREGORIO ARCILA ROLDÁN - (SOBRINO)<br>
