--- a/index.html
+++ b/index.html
@@ -413,6 +413,47 @@ INFORMACIÓN MÁS DETALLADA EN EL SIGUIENTE ENLACE:
     </center>
 </font>
 <br>
+  <center>
+<font color="" size="3">
+Diseño y programación:
+<a href="https://instagram.com/angelarcila10">
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEgeLQh4KZPJbPLIMt-rvgUNK8K2T_MxvG-I17kZ2nrbIHvd6p-VfiZbwPf4BIoU28ffHTCLwbLXIISpgZVPL3xB31sl0GrcSZ0fFOJ289oc7h06h0tXOUG6UzDTnz6X1QCjHC16MZW6osJnCrrpl-34H6o2zyjspLXmqMqsMbXg032oCEptML1sujdMgCym/s1600/2024062713544277.png" width="100px" height="100px">
+</a>
+  
+<br>
+
+© venearci 2024 - Ángel José Arcila Parra 
+<br>
+<b>ALTAGRACIA DE ORITUCO, EDO. GUARICO</b><br>
+🇻🇪 VENEZUELA
+</font>
+<br>
+<a href="https://instagram.com/angelarcila10">
+
+<img src="https://cdn-icons-png.freepik.com/256/2111/2111463.png?ga=GA1.1.1858912998.1732898111&semt=ais_hybrid" width="40px" height="40px">
+
+</a>
+
+<a href="https://www.facebook.com/angel.arcilaparra?mibextid=ZbWKwL">
+
+<img src="https://cdn-icons-png.freepik.com/256/13051/13051733.png?ga=GA1.1.1858912998.1732898111&semt=ais_hybrid" width="40px" height="40px">
+
+</a>
+
+<a href="https://youtube.com/playlist?list=PLrELDs1ewGw5GrIEyHDpc01P9aq-o74WT&si=2JOqzlLJQ67q4oga">
+
+<img src="https://cdn-icons-png.freepik.com/256/3938/3938037.png?ga=GA1.1.1858912998.1732898111&semt=ais_hybrid" width="40px" height="40px">
+
+</a>
+
+<a href="https://api.whatsapp.com/send?phone=+582383343563">
+
+<img src="https://play-lh.googleusercontent.com/ebs6ftYUkOKlDY0M174OpvargwbDyHUVAnO_G5aE0dL5GBQKCtfh3adN5H3ZMThXogDi" width="40px" height="40px">
+
+</a>
+
+  </center>
+<br>
 </td>
 </table>
 </center>
