--- a/index.html
+++ b/index.html
@@ -221,6 +221,13 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
     <li>BECAUSE WE ARE SUCH FOR THAT - ÁNGEL JOSÉ ARCILA PARRA</li>
     <li>...</li>
 
+  <ul><center>TAMBIÉN ESTABA ESCRIBIENDO DOS LIBROS</center></ul>
+  <il>CON LA MIRADA FIJA, HACÍA EL FUTURO </il>
+  <center>
+  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/BackgroundEraser_20240402_203723568.jpg" width="600px" height="600px">
+  </center>
+  <il>EL NEUTRALISMO</il>
+  <p>Ambos quedaron en stand by, no, los termine, uno lo hice como especie de manucristo a lápiz y papel, y el otro si de manera digita...</p>
 <center><p>Venearci está constituído por la familia Arcila Parra </p></center>
 <br>
 
