--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
   <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/BackgroundEraser_20240402_203723568.jpg" width="600px" height="600px">
   </center>
   <li>EL NEUTRALISMO</li>
-  <p>Ambos quedaron en stand by, no, los termine, uno lo hice como especie de manucristo a lápiz y papel, y el otro si de manera digita...</p>
+  <p>Ambos quedaron en stand by, no, los termine, uno lo hice como especie de manucristo a lápiz y papel, y el otro si de manera digita... El primero hablaba sobre, el desarrollo, medidas económicas y de producción, que deberia de tener una nación, para tener un futuro estable, en todos los aspectos de la social de un país... El segundo habala de lo importante, que es tener una nación de inclusión, una de exclusión y divisiones, por temas de ideología política. Porqué para pensar en un mejor país, es necesario que todos sus habitantes vivan en un entorno de bienestar y tranquilidad, tanto emocional, metal y social...</p>
   <br>
   <center><p>Venearci está constituído por la familia Arcila Parra </p></center>
 <br>
