--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
   <li>CON LA MIRADA FIJA, HACÍA EL FUTURO </li>
   <center>
   <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/angel 10arcila.jpg" width="600px" height="600px">
+  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png" width="600px" height="600px">
   <br>
   <font size="1" color="#000">ÁNGEL JOSÉ ARCILA PARRA</font>
   </center>
