--- a/index.html
+++ b/index.html
@@ -226,9 +226,17 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
   <br>
   <ul><center><font color="blue" size="2">TAMBIÉN ESTABA ESCRIBIENDO DOS LIBROS</font></center></ul>
   <li>CON LA MIRADA FIJA, HACÍA EL FUTURO </li>
+  <table bgcolor="#0b0e2e"  width="100%">
+  <tr>
+  <td bgcolor="#fff" width="50%">
   <center>
   <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/angel 10arcila.jpg" width="600px" height="600px">
+  </td>
+  <td bgcolor="#fff" width="50%">
   <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png" width="600px" height="600px">
+  </td>
+  </tr>
+  </table>
   <br>
   <font size="1" color="#000">ÁNGEL JOSÉ ARCILA PARRA</font>
   </center>
