--- a/index.html
+++ b/index.html
@@ -230,10 +230,12 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
   <tr>
   <td bgcolor="#fff" width="50%">
   <center>
-  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/angel 10arcila.jpg" width="700px" height="400px">
+  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/angel 10arcila.jpg" width="700px" height="500px">
   </td>
   <td bgcolor="#fff" width="50%">
-  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png" width="700px" height="400px">
+  <center>
+  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png" width="700px" height="500px">
+  </center>
   </td>
   </tr>
   </table>
