--- a/index.html
+++ b/index.html
@@ -230,16 +230,17 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
   <tr>
   <td bgcolor="#fff" width="50%">
   <center>
-  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/angel 10arcila.jpg" width="400px" height="700px">
+  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/angel 10arcila.jpg" width="100%" height="700px">
   </td>
   <td bgcolor="#fff" width="50%">
   <center>
-  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png" width="400px" height="700px">
+  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png" width="100%" height="700px">
   </center>
   </td>
   </tr>
   </table>
   <br>
+  <center>
   <font size="1" color="#000">ÁNGEL JOSÉ ARCILA PARRA</font>
   </center>
   <li>EL NEUTRALISMO</li>
