--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
     <br>
    <center><p>Venearci está constituído por la familia Arcila Parra </p></center>
   <br>
-  <ul><center><font color="blue" size="2">TAMBIÉN ESTABA ESCRIBIENDO DOS LIBROS</font></center></ul>
+  <ul><center><font color="blue" size="2">TAMBIÉN ESTABA ESCRIBIENDO DOS LIBROS</font></center></ul><br>
   <li>CON LA MIRADA FIJA, HACÍA EL FUTURO </li>
   <table bgcolor="#0b0e2e"  width="100%">
   <tr>
