--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
    <center><p>Venearci está constituído por la familia Arcila Parra </p></center>
   <br>
   <ul><center><font color="blue" size="2">TAMBIÉN ESTABA ESCRIBIENDO DOS LIBROS</font></center></ul><br>
-  <li>CON LA MIRADA FIJA, HACÍA EL FUTURO </li>
+  <li>CON LA MIRADA FIJA, HACÍA EL FUTURO </li><br>
   <table bgcolor="#0b0e2e"  width="100%">
   <tr>
   <td bgcolor="#fff" width="50%">
@@ -234,7 +234,8 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
   </td>
   <td bgcolor="#fff" width="50%">
   <center>
-  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png" width="100%" height="700px">
+  <a href="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png">
+  <img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Miradafija.png" width="100%" height="700px"></a>
   </center>
   </td>
   </tr>
