--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
 <li>VENEARCI-SPORTS </li>
 <li>PROMOCIONESVENEARCI.BLOGSPOT.COM</li>
 <li><a href="https://youtube.com/@ang0arc?si=ifk14F7-y-_XSOUa">ANGEL10ARCILAtv </a></li>
-<li><a href="https://youtube.com/@venearcitv1407?si=jXitIkOMXjFVX9Xx">VENEARCItv </a></li> 
+<li><a href="https://youtube.com/@venearcitv1407?si=jXitIkOMXjFVX9Xx">VENEARCItv1</a></li> 
+<li><a href="https://youtube.com/@venearcitv?si=u8mW4gp4wwA-j4LP">VENEARCItv</a></li>
 <li>HALCONES DE VENEZUELA </li>
 <li>TORTUGAS DE LA SÁBANA</li>
 <li>OSOS MALTÍN</li>
