--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
 CUENTAS DE TWITTER ó SPACE X:
 </font><br>
 <font color="black" size="2">
-<a href="https://twitter.com/Angel10arcila" target="_blank">@Angel10arcila</a> - <a href="https://twitter.com/Venearci" target="_blank">@Venearci </a> - <a href="https://twitter.com/UnidosPorVenez5" target="_blank"> @UnidosPorVenez5</a>
+
+<a href="https://twitter.com/Angel10arcila_" target="_blank">@Angel10arcila_</a> -<a href="https://twitter.com/Angel10arcila" target="_blank">@Angel10arcila</a> - <a href="https://twitter.com/Venearci" target="_blank">@Venearci </a> - <a href="https://twitter.com/UnidosPorVenez5" target="_blank"> @UnidosPorVenez5</a>
 </font><br>
 <font color="black" size="2">
 CUENTAS DE INSTAGRAM:
