--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Identidad -->
+<!-- ID - Identidad -->
 <html>
 
 <head>
@@ -451,7 +451,7 @@ Diseño y programación:
   
 <br>
 
-© venearci 2024 - Ángel José Arcila Parra 
+© venearci 2025 - Ángel José Arcila Parra 
 <br>
 <b>ALTAGRACIA DE ORITUCO, EDO. GUARICO</b><br>
 🇻🇪 VENEZUELA
