--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
 <li><a href="https://angel10arcila.github.io/audio/" target="_blank">VENEARCI</a></li> 
 <li><a href="https://angel10arcila.github.io/inicio/" target="_blank">VENEARCISPORTS10</a> </li>
 <li>VENEARCI.COM.VE </li>
+<br>
+  <video src="venearci.co.ve-videos1.mp4" poster=""></video>
+  
 <li><a href="https://youtube.com/@venearcimultimedia?si=KZ7Hcug-k6MiyAga">VENEARCI MULTIMEDIA</a></li>
 <li>VENEARCIOFICIAL.BLOGSPOT.COM</li>
 <li> VENEARCI-STREAMINGS </li> 
