--- a/index.html
+++ b/index.html
@@ -180,8 +180,11 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
 <li><a href="https://angel10arcila.github.io/inicio/" target="_blank">VENEARCISPORTS10</a> </li>
 <li>VENEARCI.COM.VE </li>
 <br>
-  <video src="venearci.co.ve-videos1.mp4" poster=""></video>
-  
+  <center>
+  <font size="3" color="#000">
+  Así era mi página web en el 2014-2015</font>
+  <video src="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos1.mp4" poster="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos.jpg"></video>
+</center>
 <li><a href="https://youtube.com/@venearcimultimedia?si=KZ7Hcug-k6MiyAga">VENEARCI MULTIMEDIA</a></li>
 <li>VENEARCIOFICIAL.BLOGSPOT.COM</li>
 <li> VENEARCI-STREAMINGS </li> 
