--- a/index.html
+++ b/index.html
@@ -183,9 +183,8 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
   <center>
   <font size="3" color="#000">
   Así era mi página web en el 2014-2015</font>
-  <video src="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos1.mp4" poster="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos.jpg"></video>
-</center>
-<li><a href="https://youtube.com/@venearcimultimedia?si=KZ7Hcug-k6MiyAga">VENEARCI MULTIMEDIA</a></li>
+  <video poster="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos.jpg" src="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos1.mp4" width="100%" height="100%"></video>
+  <br>
 <li>VENEARCIOFICIAL.BLOGSPOT.COM</li>
 <li> VENEARCI-STREAMINGS </li> 
 <li>VENEARCI-SPORTS </li>
