--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- ID - Identidad -->
+ <!-- ID - Identidad -->
 <html>
 
 <head>
@@ -183,7 +183,8 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
   <center>
   <font size="3" color="#000">
   Así era mi página web en el 2014-2015</font>
-  <video poster="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos.jpg" src="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos1.mp4" width="100%" height="100%"></video>
+  <video poster="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos.jpg" src="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos1.mp4" controls width="100%" height="100%"></video>
+  </center>
   <br>
 <li>VENEARCIOFICIAL.BLOGSPOT.COM</li>
 <li> VENEARCI-STREAMINGS </li> 
