--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
 <li><a href="https://angel10arcila.github.io/inicio/" target="_blank">VENEARCISPORTS10</a> </li>
 <li>VENEARCI.COM.VE </li>
   <center>
-<video poster="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos.jpg" src="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos1.mp4" controls width="100%" height="100%"></video>
+<video poster="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos.jpg" src="https://raw.githubusercontent.com/angel10arcila/videos/refs/heads/main/venearci.co.ve-videos1.m" controls width="100%" height="100%"></video>
    <font size="3" color="#000">
   Así era mi página web en el 2014-2015</font>
   </center>
