--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ PAÍS:
 VENEZUELA 🇻🇪
 </fontt><br>
 <font color="blue" size="2">
-COORDENADAS EXACTAS:
+COORDENADAS:
 </font><br>
 <font color="black" size="2">
 "9.849468,-66.386372"
