--- a/index.html
+++ b/index.html
@@ -395,13 +395,13 @@ HUMILDE - CLASE BAJA.
 </font><br>
 <font color="black" size="2">
 NO, TENGO TATUAJES EN NINGÚN LADO
-</font><br>
+</font><br><br>
  <font color="blue" size="2">
 ¿ALGUNA VEZ A USADO O USAS PIERCING?
 </font><br>
 <font color="black" size="2">
 NO, NUNCA HE USADO NADA DE ESO, ESO NO ME GUSTA.
-</font><br>
+</font><br><br>
 <font color="blue" size="2">
 ¿QUÉ OPINAS, SOBRE LA POLÍTICA?
 </font><br>
