--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
     <li>A ROMANTIC COMEDY - ANGEL JOSÉ ARCILA PARRA</li>
     <li>THE CLOCK - ÁNGEL JOSÉ ARCILA PARRA</li>
     <li>BECAUSE WE ARE SUCH FOR THAT - ÁNGEL JOSÉ ARCILA PARRA</li>
-    <li>...</li>
+   <li>LLANERITA - ÁNGEL JOSÉ ARCILA PARA</li>
+   <li>...</li>
   
     <br>
    <center><p>Venearci está constituído por la familia Arcila Parra </p></center>
