--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
     <li>THE CLOCK - ÁNGEL JOSÉ ARCILA PARRA</li>
     <li>BECAUSE WE ARE SUCH FOR THAT - ÁNGEL JOSÉ ARCILA PARRA</li>
    <li>LLANERITA - ÁNGEL JOSÉ ARCILA PARA</li>
-   <li>...</li>
+   <li>LLUVIECITA - ÁNGEL JOSÉ ARCILA PARRA</li>
+   <li>TRIGUEÑITA - ÁNGEL JOSÉ ARCILA PARRA</li>
+  <li>...</li>
   
     <br>
    <center><p>Venearci está constituído por la familia Arcila Parra </p></center>
