--- a/index.html
+++ b/index.html
@@ -223,12 +223,13 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
     <li>LLANERATO - ÁNGEL JOSÉ ARCILA PARRA</li>
     <li>CRECE CÓMO UN ÁRBOL - ÁNGEL JOSÉ ARCILA PARRA</li>
     <li>AND TAKE NOW - ÁNGEL JOSÉ ARCILA PARRA</li>
-    <li>A ROMANTIC COMEDY - ANGEL JOSÉ ARCILA PARRA</li>
+    <li>A ROMANTIC COMEDY - ÁNGEL JOSÉ ARCILA PARRA</li>
     <li>THE CLOCK - ÁNGEL JOSÉ ARCILA PARRA</li>
     <li>BECAUSE WE ARE SUCH FOR THAT - ÁNGEL JOSÉ ARCILA PARRA</li>
    <li>LLANERITA - ÁNGEL JOSÉ ARCILA PARA</li>
    <li>LLUVIECITA - ÁNGEL JOSÉ ARCILA PARRA</li>
    <li>TRIGUEÑITA - ÁNGEL JOSÉ ARCILA PARRA</li>
+  <li>Y TE ENCONTRÉ - ÁNGEL JOSÉ ARCILA PARRA</li>
   <li>...</li>
   
     <br>
