--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
    <li>LLANERITA - ÁNGEL JOSÉ ARCILA PARA</li>
    <li>LLUVIECITA - ÁNGEL JOSÉ ARCILA PARRA</li>
    <li>TRIGUEÑITA - ÁNGEL JOSÉ ARCILA PARRA</li>
-  <li>Y TE ENCONTRÉ - ÁNGEL JOSÉ ARCILA PARRA</li>
+   <li>Y TE ENCONTRÉ - ÁNGEL JOSÉ ARCILA PARRA</li>
+   <li>TÚ ERES MI SUPER HÉROE - ÁNGEL JOSÉ ARCILA PARRA</li>
+   <li>HALKIN - ÁNGEL JOSÉ ARCILA PARRA</li>
+   <li>TORTUGUIN - ÁNGEL JOSÉ ARCILA PARRA</li>
   <li>...</li>
   
     <br>
