--- a/index.html
+++ b/index.html
@@ -350,10 +350,11 @@ DEPORTE QUÉ PRÁCTICAS:
 </font><br>
 <font color="black" size="2">
 BÉISBOL ⚾ -
-SIEMPRE FUI OUTFIELD. Y JUEGUE EN EL INFIELD 3B- 2B - 1B.</font><br>
+SIEMPRE FUI OUTFIELD. Y JUEGUE EN EL INFIELD 3B- 2B - 1B. ( DERECHO )</font><br>
 <font color="blue" size="2">
 ÍDOLOS:
 </font><br>
+<img src="https://raw.githubusercontent.com/angel10arcila/angeljosearcilaparra/refs/heads/main/mis-idolos.jpg" width="100%" height="100%">
 <font color="black" size="2">
 MÍ FAMILIA, MIS PADRES, MIS HERMANOS Y MIS SOBRINOS.
 </font><br>
