--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ TRES SEMESTRE EN ING. EN SISTEMAS, TRES SEMESTRES DE ADMINISTRACIÓN.
      
 <li><a href="https://angel10arcila.github.io/audio/" target="_blank">VENEARCI</a></li> 
  <center><img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Venearci.jpg" width="20%" height="20%"></center>
- <center><img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/Venearci.jpg" width="20%" height="20%"></center>
+ <center><img src="https://raw.githubusercontent.com/angel10arcila/Id/refs/heads/main/venearci%20music.jpg" width="20%" height="20%"></center>
  
 <li><a href="https://angel10arcila.github.io/inicio/" target="_blank">VENEARCISPORTS10</a> </li>
 <li>VENEARCI.COM.VE </li>
